    modified by the user.

- Added boundary layer insertion at selected faces, using a mesh deformation
  (CDO vertex-based), followed by boundary layer extrusion.

- MEDCoupling: improve detection and add MEDLoader support. This allows e.g.
  to use MED for interpolating from one mesh to another.

Architectural changes
---------------------

- Partly unify boundary and volume zones, renaming the n_faces/n_cells
  members to n_elts and face_ids/cell_ids to elt_ids.

- Complete cs_all_to_all API to handle indexed cases.

- Use matrix assembler instead of matrix extension function for
  internal coupling, to allow for a broader range of linear system
  solvers and preconditionners.

- Add "Melissa" type writers for coupling with in-situ statistics
  Melissa server.

- Generate MEI parser/scanner upon bootstrap. This assumes Bison and Flex are
  available (but previous generated files are kept otherwise), and reduces
  dependencies for configure and build.

- CFD_Study: translate from Python2 to 3.

Release 5.1.0 (October 10 2017)
===============================

Physical modelling
------------------

- Turbulence: add DDES tubulence model
  * Activated using k-w SST model (iturb = 60) with keyword IDDES = 1
  * Hybrid Numerical scheme CD/SOLU can be activated with ISCHCV = 3

- Atmospheric model: add an atmostpheric infra-red absorption feature.
  Based on L. Makke PhD work.

Numerics
--------

- Atmospheric model: added partial radiative transfer properties model.

- Make supersonic outlet boundary condition implicit (compressible module).

- Added fallback mechanism to allow less stable but faster Krylov solvers
  (such as BiCGstab) to switch temporarily to GMRES in case of
  convergence error.

- Switch from Jacobi to processor-local symmetric Gauss-Seidel as default
  linear solver type for non-symmetric systems.

- Simplify selection of local symmetric Gauss-Seidel linear solver variant.

- Make vectorial and tensorial slope tests invariant by rotation and