@@ -1274,14 +1274,15 @@ Input compatibility:  & \med 2.3, 3.0, 3.1, or 3.2
 \hline
 Output compatibility: & \med 3.0 and above \\
 \hline
-Documentation:        & on-line documentation. Download link at \url{http://files.salome-platform.org/Salome/other/med-3.2.0.tar.gz}\\
+Documentation:        & on-line documentation. Download link at \url{http://files.salome-platform.org/Salome/other/med-3.3.1.tar.gz}\\
 \hline
 \end{tabular}
 
 \subsubsubsection{CGNS}\hyperdef{sec}{cgns}{}
 \label{sec:fmtdesc_cgns}
 
-Promoted especially by the AIAA, NASA, Boeing Commercial, and ANSYS ICEM CFD (as well as ONERA in France),
+Promoted by organizations including the AIAA, NASA, Boeing Commercial, ANSYS,
+Airbus, ONERA, SAFRAN, ANSYS, Pointwise, Inc., Numeca, and others,
 this format(\emph{CFD General Notation System}) is quite well established in
 the world of CFD. The concept is similar to that of \med, with a bigger
 emphasis on normalization of variable names or calculation information, and
@@ -1334,27 +1335,14 @@ also defining volume fields on these faces. More recent versions of the
 documentation make it clear that a field must be defined on all elements
 of maximum dimension in a zone, not on all elements.}
 
-Though many tools support CGNS, that support is often quite disappointing,
-at least for unstructured meshes. Thus, some editors seem to use
-different means to mark zones to associate with boundary conditions than
-the ones recommended in the CGNS documentation, and some behaviours
-are worse. Also, many readers do not allow the user to choose between multiple
-CGNS bases (meshes in the \CS sense), so when outputting to CGNS, it may
-be necessary to output each post-processing mesh using a separate writer.
-VisIt 2.4.2 may fail to read a volume mesh output by \CS, but read a surface
-mesh correctly, while the same volume mesh may be read with no problems
-by \ensight 10.
-The support of polygons (\emph{ngons} in the CGNS standard), is even worse,
-and even the verification tools published alongside the CGNS library were
-recently unable to handle them, and reported errors in valid files containing
-such elements. It seems support of polyhedral elements has appeared in ParaView's
-CGNS reader mid 2016, so the situation may be improving.
-For mesh input, some ICEM CFD versions used a CGNS 3 beta library,
-which led to some issues. CGNS 3 output from ICEM CFD 13 is known to work well with
-\CS, but that same version is unable to read files generated by \CS, as
-it seems to ``cheat'' with CGNS version numbers and to confuse CGNS 3 and 3.1 specs.
-ICEM 14 seems to have fixed that bug, so there should be no issues with up-to
-date versions of that software.
+Though many tools support CGNS, that support was often quite disappointing,
+at least for unstructured meshes, although it has improved in recent years.
+Some editors seem to use different means to mark zones to associate with
+boundary conditions than the ones recommended in the CGNS documentation, and
+some behaviours are worse. Also, many readers do not allow the user to
+choose between multiple CGNS bases (meshes in the \CS sense),
+so when outputting to CGNS, it may be necessary to output
+each post-processing mesh using a separate output.
 
 \smallskip \noindent
 \begin{tabular}[top]{|p{4.5cm}%
@@ -1366,8 +1354,7 @@ File type:            & portable binary (uses the ADF library specific to CGNS, 
 \hline
 Surface elements:     & triangles, quadrangles, simple polygons\\
 \hline
-Volume elements:      & tetrahedra, pyramids, prisms, hexahedra
-                        (simple polyhedra allowed by CGNS 3 but not supported yet)\\
+Volume elements:      & tetrahedra, pyramids, prisms, hexahedra, simple polyhedra\\
 \hline
 Zone selection:       & Surface zone selection using boundary conditions, no volume zone
                         selection, but the \pcs allows creation of groups associated to
@@ -1384,7 +1371,7 @@ Documentation:        & See CGNS site: \url{http://www.cgns.org}\\
 \subsubsubsection{\starccmp%
 \label{sec:fmtdesc:ccm}}
 
-This polyhedral format is the current CD-Adapco format, and is based on
+This polyhedral format is the current CD-Adapco (SIEMENS) format, and is based on
 CD-Adapco's libccmio, which is based on ADF (the low-level file format
 used by CGNS prior to the shift to HDF-5). libccmio comes with a version
 of ADF modified for performance, but also works with a standard version
@@ -1417,6 +1404,8 @@ with a CCMIO-based tool-chain, but simultaneously using another output
 format to visualize possible error output is recommended.
 
 The CCMIO library is distributed freely by CD-Adapco upon demand.
+
+Use of the CGNS format should be preferred to this format.
 
 \smallskip \noindent
 \begin{tabular}[top]{|p{4.5cm}%
